test/unit-tests/errors/less-than-match-error.spec.d.ts
export declare class GreaterThanMatchErrorTests {
    shouldBeLessThanMessage(actualValue: number, upperLimit: number): void;
    shouldNotBeLessThanMessage(actualValue: number, upperLimit: number): void;
}
